Swagger done (maybe)
