# backend/src/main/scala/it/marcopaggioro/easypay/routes/EasyPayAppRoutes.scala
@@ -1,13 +1,13 @@
 package it.marcopaggioro.easypay.routes
 
-import akka.actor.typed.scaladsl.AskPattern._
+import akka.actor.typed.scaladsl.AskPattern.*
 import akka.actor.typed.scaladsl.Behaviors
 import akka.actor.typed.{ActorRef, ActorSystem, Scheduler, SupervisorStrategy}
-import akka.http.scaladsl.model._
+import akka.http.scaladsl.model.*
 import akka.http.scaladsl.model.headers.HttpCookie
 import akka.http.scaladsl.model.ws.{Message, TextMessage}
-import akka.http.scaladsl.server.Directives._
-import akka.http.scaladsl.server._
+import akka.http.scaladsl.server.*
+import akka.http.scaladsl.server.Directives.*
 import akka.http.scaladsl.server.directives.BasicDirectives.extractRequest
 import akka.http.scaladsl.unmarshalling.{FromEntityUnmarshaller, Unmarshaller}
 import akka.pattern.StatusReply
@@ -18,16 +18,16 @@ import akka.stream.typed.scaladsl.ActorSource
 import akka.util.ByteString
 import akka.{Done, NotUsed}
 import cats.data.Validated
+import io.circe.*
 import io.circe.Encoder.encodeSeq
-import io.circe._
 import io.circe.jawn.decode
 import io.circe.syntax.EncoderOps
 import it.marcopaggioro.easypay.AppConfig
 import it.marcopaggioro.easypay.AppConfig.askTimeout
 import it.marcopaggioro.easypay.actor.WebSocketsManagerActor.WebSocketsManagerActorCommand
 import it.marcopaggioro.easypay.actor.{TransactionsManagerActor, UsersManagerActor, WebSocketsManagerActor}
-import it.marcopaggioro.easypay.database.PostgresProfile._
-import it.marcopaggioro.easypay.database.PostgresProfile.api._
+import it.marcopaggioro.easypay.database.PostgresProfile.*
+import it.marcopaggioro.easypay.database.PostgresProfile.api.*
 import it.marcopaggioro.easypay.database.scheduledoperations.ScheduledOperationRecord.ScheduledOperationUserJoinEncoder
 import it.marcopaggioro.easypay.database.scheduledoperations.{ScheduledOperationRecord, ScheduledOperationsTable}
 import it.marcopaggioro.easypay.database.transactionshistory.TransactionsHistoryRecord.TransactionUserJoinEncoder
@@ -191,7 +191,7 @@ class EasyPayAppRoutes(webSocketManagerActorRef: ActorRef[WebSocketsManagerActor
               pathPrefix("scheduler") {
                 concat(
                   path(JavaUUID) { scheduledOperationId =>
-                    delete { // DELETE /wallet/transfer/schedule/123-456-678
+                    delete { // DELETE /wallet/transfer/schedule/{scheduledOperationId}
                       askToActor[TransactionsManagerCommand, Done](
                         transactionsManagerActorRef,
                         TransactionsManager.DeleteScheduledOperation(customerId, scheduledOperationId)(_),
@@ -432,7 +432,7 @@ class EasyPayAppRoutes(webSocketManagerActorRef: ActorRef[WebSocketsManagerActor
 
     onComplete(getInteractedUsers) {
       case Failure(throwable) =>
-        system.log.error(s"Failure while getting wallet", throwable)
+        system.log.error(s"Failure while getting interacted customers", throwable)
         completeWithError(StatusCodes.InternalServerError, ValidationUtilities.GenericError)
 
       case Success(interactedUsers) =>
@@ -511,7 +511,7 @@ class EasyPayAppRoutes(webSocketManagerActorRef: ActorRef[WebSocketsManagerActor
 
     onComplete(getScheduledOperations.map(_.asJson(encodeSeq(ScheduledOperationUserJoinEncoder)))) {
       case Failure(throwable) =>
-        system.log.error(s"Failure while transferring money", throwable)
+        system.log.error(s"Failure while getting scheduled operations", throwable)
         completeWithError(StatusCodes.InternalServerError, ValidationUtilities.GenericError)
 
       case Success(json) =>
